Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-2185

Janitor.hpp fails to compile on Solaris with Solaris Studio 12.2 and 12.4

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 3.2.2
    • 3.2.3
    • Build
    • None
    • SunOS <myhostname> 5.10 Generic_147440-12 sun4v sparc sun4v
      CC: Sun C++ 5.11 SunOS_sparc 2010/08/13

    Description

      When compiling xerces-c 3.2.2 on Solaris SPARC with Solaris Studio 12.2 and 12.4, the configuration stage passes, but the build fails on these 2 lines in Janitor.hpp:

      158 XERCES_TEMPLATE_EXTERN template class XMLUTIL_EXPORT ArrayJanitor<XMLByte>;
      159 XERCES_TEMPLATE_EXTERN template class XMLUTIL_EXPORT ArrayJanitor<XMLCh>;

      The error messages are:

      "./xercesc/util/Janitor.hpp", line 158: Error: A declaration does not specify a tag or an identifier.
      "./xercesc/util/Janitor.hpp", line 158: Error: Use ";" to terminate declarations.
      "./xercesc/util/Janitor.hpp", line 159: Error: A declaration does not specify a tag or an identifier.
      "./xercesc/util/Janitor.hpp", line 159: Error: Use ";" to terminate declarations.

      When I comment out these 2 lines, the builds succeeds. I did not run the tests...

      The xerces-c 3.2.1 was built on the same environment successfully.

      Attachments

        Issue Links

          Activity

            People

              scantor Scott Cantor
              alexeyroytman Alexey Roytman
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 10m
                  10m