XERCESC-2185 XERCESC-2186 - Solaris and HP-UX